--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,8 @@
         "128": "logo.png"
     },
 
+    "permissions": ["storage"],
+
     "action": {
         "default_popup": "popup.html"
     },
