feat: Update app name to "New Tab - FOKUSS" in HTML and manifest files

--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "FOKUSS - Pomodoro",
+  "name": "New Tab - FOKUSS",
   "version": "1.0.0",
   "description": "Minimal and modern pomodoro app",
 
