--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -1,27 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "New Tab - FOKUSS",
-    "version": "1.0.0",
-    "description": "Minimal and modern pomodoro app",
-  
-    "icons": {
-      "16": "logo.png",
-      "48": "logo.png",
-      "128": "logo.png"
-    },
-  
-    "background": {
-      "scripts": ["background.js"]
-    },
-  
-    "permissions": ["storage", "alarms"],
-  
-    "action": {
-      "default_popup": "popup.html"
-    },
-  
-    "chrome_url_overrides": {
-      "newtab": "index.html"
-    }
+  "manifest_version": 3,
+  "name": "New Tab - FOKUSS",
+  "version": "1.0.0",
+  "description": "Minimal and modern pomodoro app",
+
+  "icons": {
+    "16": "logo.png",
+    "48": "logo.png",
+    "128": "logo.png"
+  },
+
+  "background": {
+    "scripts": ["background.js"]
+  },
+
+  "permissions": ["storage", "alarms"],
+
+  "action": {
+    "default_popup": "popup.html"
+  },
+
+  "options_ui": {
+    "page": "settings.html",
+    "open_in_tab": true
+  },
+
+  "chrome_url_overrides": {
+    "newtab": "index.html"
   }
-  
+}
